--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -119,7 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
         android:layout_below="@+id/top_buttons_container"
-        android:background="@android:color/black" />
+        android:background="#2f000000" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -248,7 +248,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/height_1"
                     android:layout_alignParentTop="true"
-                    android:background="@android:color/black"/>
+                    android:background="#2f000000"/>
 
                 <RelativeLayout
                     android:id="@+id/profile_data_container"
@@ -419,7 +419,6 @@
                         android:id="@+id/autoTranslateToggle"
                         android:layout_width="56dp"
                         android:layout_height="wrap_content"
-                        android:backgroundTint=""
                         android:layout_marginLeft="8dp"
                         android:layout_marginBottom="8dp"
                         android:layout_alignBaseline="@+id/autoTranslateLabel"
@@ -441,7 +440,7 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/height_1"
-                    android:background="@android:color/black" />
+                    android:background="#2f000000" />
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -541,7 +540,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_1"
                 android:layout_below="@+id/holder_progress_bar"
-                android:background="@android:color/black" />
+                android:background="#2f000000" />
 
             <base.app.util.ui.NoScrollRecycler
                 android:id="@+id/profile_stats_recycler_view"
@@ -572,14 +571,14 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/height_1"
-                    android:background="@android:color/black" />
+                    android:background="#2f000000" />
 
                 <View
 
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/height_1"
                     android:layout_alignParentBottom="true"
-                    android:background="@android:color/black" />
+                    android:background="#2f000000" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -593,13 +592,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/height_1"
                     android:layout_alignParentBottom="true"
-                    android:background="@android:color/black" />
+                    android:background="#2f000000" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/height_1"
                     android:layout_alignParentTop="true"
-                    android:background="@android:color/black" />
+                    android:background="#2f000000" />
 
 
                 <ImageButton
