--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -197,6 +197,7 @@
                         android:id="@+id/profile_image_level"
                         android:layout_width="@dimen/profile_level_marker_size"
                         android:layout_height="@dimen/profile_level_marker_size"
+                        tools:text="0"
                         android:layout_alignEnd="@id/profile_image_container"
                         android:layout_alignStart="@id/profile_image_container"
                         android:layout_below="@id/profile_image_container"
@@ -209,6 +210,7 @@
                         android:id="@+id/your_profile_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        tools:text="Test User"
                         android:layout_alignEnd="@id/profile_image_container"
                         android:layout_alignStart="@id/profile_image_container"
                         android:layout_below="@id/profile_image_container"
@@ -476,6 +478,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                tools:text="0"
                                 android:id="@+id/caps_value"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -533,7 +536,9 @@
                             android:layout_centerInParent="true"
                             android:gravity="center"
                             android:textColor="@color/white"
+                            tools:text="1"
                             android:textStyle="bold" />
+
                     </RelativeLayout>
 
                 </RelativeLayout>
