--- a/SportsSideKick/app/src/main/res/layout-large/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_login.xml
@@ -120,7 +120,7 @@
                                             android:layout_height="@dimen/standard_button_height"
                                             android:layout_weight="0.33"
                                             android:background="@drawable/text_login_selector"
-                                            android:hint="@string/login_login_email"
+                                            android:hint="@string/email"
                                             android:inputType="textEmailAddress"
                                             android:nextFocusDown="@+id/login_password"
                                             android:padding="@dimen/padding_8"
@@ -149,7 +149,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="@dimen/standard_button_height"
                                         android:background="@drawable/text_login_selector"
-                                        android:hint="@string/login_login_email"
+                                        android:hint="@string/email"
                                         android:inputType="textEmailAddress"
                                         android:nextFocusDown="@+id/login_password"
                                         android:padding="@dimen/padding_8"
@@ -163,7 +163,7 @@
                                         android:layout_height="@dimen/standard_button_height"
                                         android:layout_marginTop="@dimen/margin_10"
                                         android:background="@drawable/text_login_selector"
-                                        android:hint="@string/login_login_password"
+                                        android:hint="@string/password"
                                         android:inputType="textPassword"
                                         android:padding="@dimen/padding_8"
                                         android:textAlignment="center"
@@ -205,7 +205,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_weight="5"
                                             android:gravity="center"
-                                            android:text="@string/sign_up_or"
+                                            android:text="@string/or"
                                             android:textAllCaps="true"
                                             android:textColor="@color/white" />
 
