--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -59,7 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/standard_button_height"
                     android:background="@drawable/text_login_selector"
-                    android:hint="@string/login_login_email"
+                    android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     android:nextFocusDown="@+id/login_password"
                     android:padding="@dimen/padding_8"
@@ -148,7 +148,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center"
-                        android:text="@string/sign_up_or"
+                        android:text="@string/or"
                         android:textAllCaps="true"
                         android:textColor="?popupsCaptionColor" />
 
@@ -170,7 +170,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/standard_button_height"
                     android:background="@drawable/text_login_selector"
-                    android:hint="@string/login_login_email"
+                    android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     android:nextFocusDown="@+id/login_password"
                     android:padding="@dimen/padding_8"
@@ -184,7 +184,7 @@
                     android:layout_height="@dimen/standard_button_height"
                     android:layout_marginTop="@dimen/margin_10"
                     android:background="@drawable/text_login_selector"
-                    android:hint="@string/login_login_password"
+                    android:hint="@string/password"
                     android:inputType="textPassword"
                     android:padding="@dimen/padding_8"
                     android:textAlignment="center"
