--- a/SportsSideKick/app/src/main/res/layout-large/item_video_chat_slot.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/item_video_chat_slot.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     app:layout_constraintBottom_toTopOf="@+id/preview_video_view">
 
     <com.wang.avi.AVLoadingIndicatorView
@@ -50,11 +51,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_8"
-        android:text="@string/ellipsis"
+        tools:text="..."
         android:textColor="@color/white"
         android:textSize="@dimen/font_size_12"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/video_view" />
+
 </android.support.constraint.ConstraintLayout>
