--- a/SportsSideKick/app/src/main/res/layout-large/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_profile.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true"
     android:layout_marginBottom="@dimen/margin_60"
     android:layout_marginEnd="@dimen/margin_90"
@@ -169,7 +170,7 @@
                 android:layout_below="@id/profile_image_container"
                 android:layout_marginTop="@dimen/margin_negative_19"
                 android:gravity="center"
-                android:text="@string/max_level_value"
+                tools:text="99"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
@@ -282,10 +283,11 @@
                 android:id="@+id/password_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="***********"
                 android:layout_alignStart="@+id/password_caption"
                 android:layout_below="@+id/password_caption"
-                android:text="@string/password_placeholder"
-                android:textColor="?yourProfileInfoDetailsColorRef" />
+                android:textColor="?yourProfileInfoDetailsColorRef"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/chosen_language_caption"
@@ -413,7 +415,7 @@
                     android:layout_height="@dimen/popup_your_friends_next_level_cointainer_text_size"
                     android:layout_centerInParent="true"
                     android:gravity="center"
-                    android:text="@string/max_level_value"
+                    tools:text="99"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
             </RelativeLayout>
