--- a/SportsSideKick/app/src/main/res/layout/comment_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/comment_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -26,7 +27,7 @@
             android:layout_marginEnd="@dimen/margin_15"
             android:layout_marginTop="@dimen/margin_5"
             android:minLines="1"
-            android:text="@string/comment_text"
+            tools:text="Demo comment text"
             android:textAlignment="viewStart"
             android:textColor="@color/black" />
 
@@ -35,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/post_text"
-            android:text="@string/comment_text"
+            tools:text="Demo comment text"
             android:layout_marginTop="@dimen/margin_5"
             android:textColor="@color/colorGray"
             android:textSize="@dimen/font_size_10" />
