--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/margin_5"
@@ -72,22 +73,23 @@
         android:textSize="@dimen/font_size_10" />
 
     <TextView
-        android:id="@+id/spliter"
+        android:id="@+id/splitter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/content_container"
         android:layout_toEndOf="@+id/sender"
         android:alpha="0.5"
-        android:text="@string/message_time_splitter"
+        android:text="|"
         android:textColor="?chatDetailsColorRef"
-        android:textSize="@dimen/font_size_10" />
+        android:textSize="@dimen/font_size_10"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/content_container"
-        android:layout_toEndOf="@+id/spliter"
+        android:layout_toEndOf="@+id/splitter"
         android:alpha="0.5"
         android:textColor="?chatDetailsColorRef"
         android:textSize="@dimen/font_size_10" />
