--- a/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryMediumLight"
@@ -467,10 +468,11 @@
                         android:maxLines="1"
                         android:nextFocusDown="@+id/last_name_edit_text"
                         android:nextFocusForward="@+id/last_name_edit_text"
-                        android:text="@string/password_placeholder"
+                        android:text="***********"
                         android:textColor="?editProfileTextColorRef"
                         android:textSize="@dimen/font_size_12"
-                        android:padding="@dimen/padding_8"/>
+                        android:padding="@dimen/padding_8"
+                        tools:ignore="HardcodedText" />
 
                 </LinearLayout>
 
