--- a/SportsSideKick/app/src/main/res/layout/popup_member_info.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_member_info.xml
@@ -229,7 +229,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="3dp"
             android:gravity="center"
-            android:text="@string/max_level_value"
+            tools:text="99"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/font_size_10"
