--- a/SportsSideKick/app/src/main/res/layout/wall_item_shop.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_shop.xml
@@ -42,7 +42,7 @@
         android:minLines="1"
         android:padding="@dimen/padding_12"
         android:scrollHorizontally="true"
-        android:text="@string/demo_content_lorem_long"
+        android:text="@string/demo_lorem_ipsum"
         android:textColor="?black"
         android:textSize="@dimen/font_size_16" />
 
@@ -86,7 +86,7 @@
                 android:id="@+id/comments_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_1"
+                android:text="@string/demo_number_1"
                 android:textSize="@dimen/font_size_10" />
 
         </LinearLayout>
@@ -124,7 +124,7 @@
                 android:id="@+id/likes_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_2"
+                android:text="@string/demo_number_2"
                 android:textSize="@dimen/font_size_10" />
         </LinearLayout>
     </RelativeLayout>
