--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -39,7 +39,7 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:paddingTop="16dp"
-                android:text="@string/demo_content_lorem_long"
+                android:text="@string/demo_lorem_ipsum"
                 android:textColor="#1b1c1a"
                 android:textSize="18sp" />
 
@@ -83,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
-                    android:text="@string/demo_content_number_1"
+                    android:text="@string/demo_number_1"
                     android:textSize="@dimen/font_size_10" />
 
                 <android.support.v7.widget.AppCompatImageView
@@ -106,7 +106,7 @@
                     android:id="@+id/likes_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/demo_content_number_2"
+                    android:text="@string/demo_number_2"
                     android:textSize="@dimen/font_size_10" />
 
             </LinearLayout>
@@ -147,7 +147,7 @@
             android:minLines="1"
             android:padding="@dimen/padding_8"
             android:scrollHorizontally="true"
-            android:text="@string/demo_content_lorem_long"
+            android:text="@string/demo_lorem_ipsum"
             android:textColor="#bd000000"
             android:textSize="@dimen/font_size_14" />
 
