--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumours.xml
@@ -42,7 +42,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="16dp"
                 android:paddingBottom="8dp"
-                android:text="@string/demo_content_lorem_long"
+                android:text="@string/demo_lorem_ipsum"
                 android:textColor="#1b1c1a"
                 android:textSize="18sp"/>
 
@@ -89,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_marginRight="8dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/demo_content_number_1"
+                    android:text="@string/demo_number_1"
                     android:textSize="@dimen/font_size_10"/>
 
                 <android.support.v7.widget.AppCompatImageView
@@ -112,7 +112,7 @@
                     android:id="@+id/likes_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/demo_content_number_2"
+                    android:text="@string/demo_number_2"
                     android:textSize="@dimen/font_size_10"/>
 
         </LinearLayout>
@@ -159,7 +159,7 @@ android:visibility="gone">
     android:minLines="1"
     android:padding="@dimen/padding_8"
     android:scrollHorizontally="true"
-    android:text="@string/demo_content_lorem_long"
+    android:text="@string/demo_lorem_ipsum"
     android:textColor="#bd000000"
     android:textSize="@dimen/font_size_14"/>
 
