--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -68,7 +68,7 @@
         android:layout_marginTop="-12dp"
         android:padding="@dimen/padding_8"
         android:scrollHorizontally="true"
-        android:text="@string/demo_content_lorem_long"
+        android:text="@string/demo_lorem_ipsum"
         android:textColor="?black"
         android:textSize="18sp" />
 
@@ -118,7 +118,7 @@
                 android:id="@+id/likes_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_2"
+                android:text="@string/demo_number_2"
                 android:textSize="@dimen/font_size_10" />
         </LinearLayout>
 
@@ -142,7 +142,7 @@
                 android:id="@+id/comments_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_1"
+                android:text="@string/demo_number_1"
                 android:textSize="@dimen/font_size_10" />
 
         </LinearLayout>
