--- a/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
@@ -526,7 +526,7 @@
                         android:maxLines="1"
                         android:nextFocusDown="@+id/last_name_edit_text"
                         android:nextFocusForward="@+id/confirm_button"
-                        android:text="@string/this_language"
+                        android:text="@string/language_current"
                         android:textColor="?editProfileTextColorRef"
                         android:textSize="@dimen/font_size_12"
                         android:padding="@dimen/padding_8" />
